# gmandel

./: .gitignore  LICENCE  Makefile.am  autogen.bash  configure.ac
src/: Makefile.am  burningship.c  burningship.h  color.c  color.h  color_filter.c  color_filter.h  gburningship.c  gfract.c  gfract.h  gfract_engines.h  gjulia-video.c  gjulia.c  gmandel.c  gui.h  gui_about.c  gui_about.h  gui_actions.c  gui_actions.h  gui_callbacks.c  gui_callbacks.h  gui_menu.c  gui_menu.h  gui_progress.c  gui_progress.h  gui_report.c  gui_report.h  gui_save.c  gui_save.h  gui_state.c  gui_state.h  gui_status.c  gui_status.h  julia.c  julia.h  mandelbrot.c  mandelbrot.h  mupoint.c  mupoint.h  paint.c  (+6 more)
states-test/: dark-colorscheme-brightness.gmandel  test-state-0.gmandel  test-state-1.gmandel  test-state-2.gmandel
